--- a/www/page.html
+++ b/www/page.html
@@ -7,11 +7,7 @@
 		<title>Document</title>
 	</head>
 <body>
-	<h1>啊ssdsas</h1>
-	<h2>你ws</h2>
-	<div>大ds</div>
-	<input type="button" value='点是sd把' id='btn'>
-	<script src='js/socket.io.min.js'></script>
+	<h1>hello world</h1>
 	<script src="/main/bundle.js"></script>
     <script src="/reload/reload.js"></script>
 </body>
